# hash-cores

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  default.nix  dsignal-hash-cores.cabal  hash-cores.cabal  hash-cores.nix  stack.yaml
examples/: TopEntities.hs
src/Clash/HashCores/: Compositions.hs  Core.hs  Cores.hs  Demo.hs  Hashes.hs  Sha256.hs  TH.hs  Utils.hs
src/Clash/HashCores/Class/: Circuit.hs  Composition.hs  Iterable.hs  MerkleDamgard.hs  Paddable.hs
src/Clash/HashCores/Composition/: InPlace.hs  Iterated.hs  Pipelined.hs
src/Clash/HashCores/Core/: SimpleSingleBlock.hs
src/Clash/HashCores/Cores/: SimpleSingleBlock.hs
src/Clash/HashCores/Generators/: Counter.hs
src/Clash/HashCores/Hash/: SHA1.hs  SHA256.hs
test/: Spec.hs
test/HashCores/: Sha256Spec.hs
test/Test/HashCores/: InPlaceSHA256.hs  PipelinedSHA256.hs  SHA256.hs
