name:                hash-cores
version:             0.1.0.0
license:             BSD3
author:              Ben Blaxill
maintainer:          Ben Blaxill <ben.blaxill@gmail.com>
copyright:           2018
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Clash.HashCores.Cores
                     , Clash.HashCores.Cores.SimpleSingleBlock
                     , Clash.HashCores.Class.Iterable
                     , Clash.HashCores.Class.Composition
                     , Clash.HashCores.Class.Paddable
                     , Clash.HashCores.Composition.InPlace
                     , Clash.HashCores.Composition.Pipelined
                     , Clash.HashCores.Compositions
                     , Clash.HashCores.Hash.SHA1
                     , Clash.HashCores.Hash.SHA256
                     , Clash.HashCores.Hashes
                     , Clash.HashCores.Generator.Counter
                     , Clash.HashCores.TH
  default-extensions: DataKinds
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      InstanceSigs
                      MultiParamTypeClasses
                      RankNTypes
                      ScopedTypeVariables
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators

  build-depends:       base >= 4.7 && < 5
                     , ghc-typelits-extra
                     , ghc-typelits-natnormalise
                     , ghc-typelits-knownnat
                     , clash-prelude
                     , lens
                     , deepseq
                     , bytestring
                     , QuickCheck
                     , template-haskell
                     , deepseq
                     , data-default
                     , bifunctors
                     , singletons                >= 1.0     && < 3.0
                     , reflection
  default-language:    Haskell2010
  ghc-options: -Wall -Werror -Wwarn=incomplete-patterns
                             -- ^ GADTs confuse incomplete-patterns
                             -Wno-missing-home-modules
                             -- ^ GHCi & loading scripts

executable hash-cores-test
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions: DataKinds
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      InstanceSigs
                      MultiParamTypeClasses
                      RankNTypes
                      ScopedTypeVariables
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators

  build-depends:       base
                     , ghc-typelits-extra
                     , ghc-typelits-natnormalise
                     , ghc-typelits-knownnat
                     , hash-cores
                     , clash-prelude
                     , hspec
                     , QuickCheck
                     , smallcheck
                     , lens
                     , tasty
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty-hunit
                     , deepseq
                     , cryptohash
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fplugin=GHC.TypeLits.Normalise
                       -fplugin=GHC.TypeLits.KnownNat.Solver
  default-language:    Haskell2010
  other-modules:       Test.HashCores.SHA256
                     , Test.HashCores.PipelinedSHA256
